# vlm-math-hw

./: .gitignore  DATA_SOURCES.md  GRADING.md  HARDWARE_TRACKS.md  MATHVISTA_EVAL.md  README.md  README_MEDIUM_ASSETS.md  TASK.md  pyproject.toml  report.md  report_template.md
assets/: README.md
assets/math_vqa_medium/: README.md  manifest.jsonl
assets/toy_math_vqa/: README.md  manifest.jsonl
configs/: eval_mathvista_testmini.yaml  inference_math.yaml  track_a_cpu.yaml  track_a_cpu_medium.yaml  track_b_small_gpu.yaml  track_b_small_gpu_medium.yaml  track_c_a100_pretrain.yaml  track_c_a100_sft.yaml
hw/: __init__.py  benchmark.py  constants.py  dataset.py  model.py  processor.py  train.py
scripts/: advanced_vlm_experiment.py  create_hf_dataset_repo.py  eval_real_vlm_mathvista.py  package_submission.sh  prepare_mathvista_testmini.py  run_public_tests.sh  train_adapter_mps.py
tests_public/: conftest.py  test_benchmark_public.py  test_dataset_public.py  test_model_public.py  test_processor_public.py  test_train_public.py
