[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-math-hw"
version = "0.1.0"
description = "Homework template for visual mathematical reasoning VLM"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "torch>=2.2",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.8",
]
ml = [
    "transformers>=4.41",
    "datasets>=2.19",
    "accelerate>=0.30",
    "peft>=0.11",
    "safetensors>=0.4",
    "huggingface_hub>=0.23",
]

[tool.setuptools.packages.find]
include = ["hw*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests_public"]
pythonpath = ["."]
